Fix z-index of selected photo in carousel view

--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -57,6 +57,7 @@
 
   &.show {
     opacity: 1;
+    z-index: 1;
   }
 }
 
